transitions + background gradient
added a background gradient along with a transform

--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ h2 + p {
     flex-direction: column;
 }
 
-input, button {
+input, .btn {
     font-family: inherit;
     text-align: inherit;
     font-size: inherit;
@@ -104,11 +104,30 @@ input, button {
     padding: 1em 2.5em;
     border-radius: 10px;
     border: 1px solid #404040;
+    letter-spacing: 1px;
 }
 
-btn {
+.btn {
     cursor: pointer;
+    font-weight: 900;
+    color: white;
+    text-transform: uppercase;
+}
 
+
+.btn-register {
+    background-image: linear-gradient(38deg, rgba(255,239,0,1) 6%, rgba(255,162,0,1) 46%);
+}
+
+input, .btn-register {
+    transition: transform 250ms;
+}
+
+input:hover,
+input:focus,
+.btn-register:hover,
+.btn-register:focus {
+    transform: scale(1.05);
 }
 
 
